trybuild-qcell/src/compiletest/tcell-02.stderr
error[E0308]: mismatched types
   --> src/compiletest/tcell-02.rs:18:28
    |
18  |     let c1ref = owner_b.ro(&*c1);   // Compile error
    |                         -- ^^^^ expected struct `MarkerB`, found struct `MarkerA`
    |                         |
    |                         arguments to this function are incorrect
    |
    = note: expected reference `&TCell<MarkerB, _>`
               found reference `&TCell<MarkerA, u32>`
note: associated function defined here
   --> $QCELL/src/tcell.rs
    |
    |     pub fn ro<'a, T: ?Sized>(&'a self, tc: &'a TCell<Q, T>) -> &'a T {
    |            ^^
